Revision history for Perl module POE::Declarative

0.006 Sun Oct 7 21:29:22 2007
    * Added t/call-returns.t to reveal a problem with capturing return values
      from handlers that have been call()ed.
    * Fixed _handle_states() to return results correctly.

0.005 Sun Oct 7 16:53:43 2007
    * Added support for having multiple handlers for the same state.
    * Added t/multiple-handlers.t to test the new multiple handler feature.

0.004 Sat Oct 6 12:34:54 2007
    * Adding the ability to setup a custom heap.

0.003 Fri Oct 5 13:58:43 2007
    * Fixed the MANIFEST which failed to include t/object-states.t from the
      previous release.
    * Added a default heap -> {}
    * Added POE::Declarative::Mixin for additional mixin support.
    * Added support for multiple states in on().
    * Added t/mixins.t and related classes in t/lib to test mixin support.
    * Added t/on-array.t to test multiple states being passed to on().

0.002 Fri Oct 5 11:43:04 2007
    * Switched from using inline_states to package_states or object_states
      depending on whether a package or object is passed to setup().
    * Added t/object-states.t to test object states.

0.001 Mon Oct 1 21:44:00 2007
    * Initial release.
    * Added the POE::Declarative module with get(), call(), delay(), post(),
      yield(), setup(), on(), and run().
    * Added some basic tests to get started with.