@@ -10,4 +10,4 @@ no_index:
     - t
 requires: 
   POE: 0
-version: 0.005
+version: 0.006
